Add jwt token auth
